logs/test-amd64-fix-5.txt
AS  kernel/arch/amd64/boot/start.S
AS  kernel/arch/amd64/cpu/isr_stubs.S
AS  kernel/arch/amd64/cpu/syscall.S
AS  kernel/arch/amd64/cpu/context.S
AS  kernel/arch/amd64/boot/trampoline.S
CC  kernel/arch/amd64/cpu/cpu.c
CC  kernel/arch/amd64/cpu/idt.c
CC  kernel/arch/amd64/cpu/gdt.c
CC  kernel/arch/amd64/cpu/msr.c
CC  kernel/arch/amd64/cpu/apic.c
CC  kernel/arch/amd64/mm/mmu.c
CC  kernel/arch/amd64/mm/uaccess.c
CC  kernel/drivers/uart/16550.c
CC  kernel/drivers/timer/pic_pit.c
CC  kernel/arch/amd64/platform/platform.c
kernel/arch/amd64/platform/platform.c: In function 'arch_get_kernel_stack':
kernel/arch/amd64/platform/platform.c:193:17: error: 'MAX_CPUS' undeclared (first use in this function)
  193 |   if (cpu_id >= MAX_CPUS) return NULL;
      |                 ^~~~~~~~
kernel/arch/amd64/platform/platform.c:193:17: note: each undeclared identifier is reported only once for each function it appears in
kernel/arch/amd64/platform/platform.c: In function 'arch_cpu_wake_secondary':
kernel/arch/amd64/platform/platform.c:207:17: error: 'MAX_CPUS' undeclared (first use in this function)
  207 |   if (cpu_id >= MAX_CPUS) return -1;
      |                 ^~~~~~~~
kernel/arch/amd64/platform/platform.c: In function 'arch_smp_init':
kernel/arch/amd64/platform/platform.c:247:26: error: 'MAX_CPUS' undeclared (first use in this function)
  247 |     uint32_t cpu_count = MAX_CPUS;
      |                          ^~~~~~~~
kernel/arch/amd64/platform/platform.c: At top level:
kernel/arch/amd64/platform/platform.c:273:6: error: no previous prototype for 'arch_bus_scan' [-Werror=missing-prototypes]
  273 | void arch_bus_scan(void) {
      |      ^~~~~~~~~~~~~
cc1: all warnings being treated as errors
make: *** [build/amd64/kernel/arch/amd64/platform/platform.o] Error 1
